[Video] Add code snippets to Newscast #70